--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,27 +5,42 @@ spring:
   cloud:
     gateway:
       routes:
+        # Public routes for auth-service (no filter)
         - id: auth-unprotected-routes
           uri: http://localhost:8081
+          order: 1
           predicates:
-            - Path=/api/v1/auth/login, Path=/api/v1/auth/register
+            - Path=/api/v1/auth/login
+            - Path=/api/v1/auth/create
+            - Path=/api/v1/auth/forgot-password/**
+            - Path=/api/v1/auth/verify-password-reset-token
+            - Path=/api/v1/auth/change-password
+
+        # Public routes for user-service (no filter)
+        - id: user-service-unprotected-route
+          uri: http://localhost:8086
+          order: 2
+          predicates:
+            - Path=/api/v1/users/register
+            - Path=/api/v1/users/verify
+
+        # Protected routes for auth-service (apply filter)
         - id: auth-protected-routes
           uri: http://localhost:8081
           predicates:
-            - Path=/api/v1/auth/{login}, Path=/api/v1/auth/{register}
-          filters:
-            - name: ApiGatewayFilter
-        - id: user-service-unprotected-route
-          uri: http://localhost:8086
-          predicates:
-            - Path=/api/v1/users/register
-        - id: user-service-protected-route
-          uri: http://localhost:8086
-          predicates:
-            - Path=/api/v1/users/{register}
+            - Path=/api/v1/auth/**
           filters:
             - name: ApiGatewayFilter
 
+        # Protected routes for user-service (apply filter)
+        - id: user-service-protected-route
+          uri: http://localhost:8086
+          predicates:
+            - Path=/api/v1/users/**
+          filters:
+            - name: ApiGatewayFilter
+
+        # Protected routes for account-service (apply filter)
         - id: account-service-protected-route
           uri: http://localhost:8082
           predicates:
@@ -33,11 +48,20 @@ spring:
           filters:
             - name: ApiGatewayFilter
 
+
+        # Protected routes for app-managment-service (apply filter)
+        - id: app-management-service-protected-route
+          uri: http://localhost:8088
+          predicates:
+            - Path=/api/v1/app-management/**
+          filters:
+            - name: ApiGatewayFilter
+
       default-filters:
         - name: RequestRateLimiter
           args:
-            redis-rate-limiter.replenishRate: 1
-            redis-rate-limiter.burstCapacity: 1
+            redis-rate-limiter.replenishRate: 3
+            redis-rate-limiter.burstCapacity: 3
             redis-rate-limiter.requestedTokens: 1
             key-resolver: "#{@userKeyResolver}"
         - name: CircuitBreaker
